Add solution for Basic Calculator

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
+待优化
+======
 
-To Optimize
-===========
+* Longest Palindromic Substring
 
-Longest Palindromic Substring
+* Basic Calculator
+    可能是因为使用了stringstream，效率差于大部分C++答案。
