--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,10 @@
 
 * Basic Calculator
     可能是因为使用了stringstream，效率差于大部分C++答案。
+
+
+尝试多种思路
+============
+
+* Letter Combinations of a Phone Number
+    backtracing方案
